k8s/security/network-policy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: hpc-platform-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
